# norweb

./: .gitignore  .mailmap  LICENSE  README.md  manifest.json  node.d.ts  node.d.ts.map  node.deps.json  node.js  node.js.map  node.locale=en.json  node.locale=ru.json  node.meta.tree  node.mjs  node.test.js  node.test.js.map  node.view.tree  package.json  test.html  web.d.ts  web.d.ts.map  web.deps.json  web.js  web.js.map  web.locale=en.json  web.locale=ru.json  web.meta.tree  web.mjs  web.test.js  web.test.js.map  web.view.tree
.githooks/: install.sh  pre-commit  pre-push
app/: app.locale=en.json  app.locale=ru.json  app.meta.tree  app.test.ts  app.view.css.ts  app.view.tree  app.view.ts  index.html
back/: .env.example  README.md  openapi.json  pyproject.toml
back/scripts/: regen-openapi-client.mjs  regen-openapi.sh
back/src/ragu_web_api/: __init__.py  main.py
back/src/ragu_web_api/fixtures/: __init__.py  mock_data.py
back/src/ragu_web_api/routers/: __init__.py  agent.py  datasets.py  graph.py  system.py
back/src/ragu_web_api/schemas/: __init__.py  agent.py  common.py  datasets.py  graph.py
back/src/ragu_web_api/services/: __init__.py  dependencies.py  index_repository.py  mock_repository.py
back/tests/: test_api.py
chat/: chat.locale=ru.json  chat.view.css.ts  chat.view.tree  chat.view.ts
dashboard/: dashboard.locale=ru.json  dashboard.view.css.ts  dashboard.view.tree  dashboard.view.ts
docs/: 01_Концепция_функциональность_стек.md  02_Роадмап.md
explorer/: explorer.locale=ru.json  explorer.view.css.ts  explorer.view.tree
front/api/: api.ts  (+2 more)
(+139 files in other folders)
