[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragu-web-api"
version = "0.1.0"
description = "FastAPI gateway contract for the RAGU web demo"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "pydantic>=2.8.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ragu_web_api"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
